fix minor layout issues mobile

--- a/style.css
+++ b/style.css
@@ -654,7 +654,7 @@ li{
         background-color: #fff;
         border-radius: 20px;
         padding: 40px 20px;
-        height: 180px;
+        height: 220px;
         -webkit-box-shadow: 0px 10px 12px 0px rgba(0,0,0,0.5); 
         box-shadow: 0px 10px 12px 0px rgba(0,0,0,0.5);
     }
@@ -786,8 +786,8 @@ li{
     }
 
     .port-box{
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 110px;
     }
 
     .port-box,
